Commit nodes-collector to deno deployment 🧗

--- a/xlsx2csv-demo/file-upload-template.html
+++ b/xlsx2csv-demo/file-upload-template.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>CSV / XLSX 文件上传处理演示</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <style>
     body {
@@ -77,7 +81,7 @@
         </ul>
       </p>
       <p>
-        THIS IS A DEMO PAGE. Version: v20241113.
+        THIS IS A DEMO PAGE. Version: v20241115.
       </p>
     </blockquote>
     <script>
