--- a/mihomo-subs-converter/default.html
+++ b/mihomo-subs-converter/default.html
@@ -99,14 +99,20 @@
         <ul class="ol-links">
           <li>Mihomo Subs Example Links:</li>
           <li>
-            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 nc</a>
+            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 NC</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 xqe</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 XQE</a>
+          </li>
+          <li>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 AUTO1</a>
+          </li>
+          <li>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&base64=true">🆔 AUTO2</a>
           </li>
         </ul>
       </div>
-      <div class="version-info">Version: v20241117</div>
+      <div class="version-info">Version: v20241119</div>
     </blockquote>
   </body>
 </html>
