Deploy mihomo-subs-converter to deno server 🏄

--- a/xlsx2csv-demo/file-upload-template.html
+++ b/xlsx2csv-demo/file-upload-template.html
@@ -81,7 +81,7 @@
         </ul>
       </p>
       <p>
-        THIS IS A DEMO PAGE. Version: v20241115.
+        THIS IS A DEMO PAGE. Version: v2024.11.15
       </p>
     </blockquote>
     <script>
