🔴 Skip nodes with `cipher: ss` configuration. Update the logo and page title for the project 'mihomo-subs-converter' 🙂

--- a/mihomo-subs-converter/default.html
+++ b/mihomo-subs-converter/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mihomo Subscription File / Link Converter</title>
+    <title>V2ray to Mihomo (Subscription File / Link Converter)</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -81,7 +81,7 @@
     }
   </style>
   <body>
-    <h1>Mihomo Subscription File / Link Converter</h1>
+    <h1>V2ray to Mihomo (Subscription File / Link Converter)</h1>
     <form action="/">
       <p>
         <input type="text" class="link" id="link" name="link" placeholder="V2ray Subscription Link (e.g. https://example.com/v2ray_subs.txt)">
@@ -91,13 +91,13 @@
           <input type="checkbox" id="base64" name="base64" value="true">
           <label for="base64">Base64 Decoding</label>
         </span>
-        <input type="submit" value="V2ray ➡️ Mihomo">
+        <input type="submit" value="V2ray to Mihomo">
       </p>
     </form>
     <blockquote>
       <div>
         <ul class="ol-links">
-          <li>Mihomo Subs Example Links:</li>
+          <li>Available Mihomo Subs Links:</li>
           <li>
             <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 NC</a>
           </li>
@@ -112,7 +112,7 @@
           </li>
         </ul>
       </div>
-      <div class="version-info">Version: v2024.11.20</div>
+      <div class="version-info">Version: v2024.11.22</div>
     </blockquote>
   </body>
 </html>
