Fix bugs and update links for the project 'mihomo-subs-converter' 🔖

--- a/mihomo-subs-converter/default.html
+++ b/mihomo-subs-converter/default.html
@@ -66,7 +66,7 @@
     }
     .ol-links {
       list-style: none;
-      margin: 0;
+      margin: 1rem 0;
       padding: 0;
       flex-wrap: wrap;
     }
@@ -99,20 +99,31 @@
         <ul class="ol-links">
           <li>Available Mihomo Subs Links:</li>
           <li>
-            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 NC</a>
+            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 Nc</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 XQE</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 Xqe</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 AUTO1</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 Auto 1</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&base64=true">🆔 AUTO2</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&base64=true">🆔 Auto 2</a>
+          </li>
+          <li>
+            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2FSurfboardv2ray%2FProxy-sorter%2Fmain%2Fselector%2Frandom">🆔 Random</a>
           </li>
         </ul>
       </div>
-      <div class="version-info">Version: v2024.11.22</div>
+      <div>
+        <ul class="ol-links">
+          <li>Reference:</li>
+          <li>
+            <a href="https://wiki.metacubex.one/en/" target="_blank">📖 Mihomo Wiki</a>
+          </li>
+        </ul>
+      </div>
+      <div class="version-info">Version: v2024.11.23</div>
     </blockquote>
   </body>
 </html>
