Update links names 💬

--- a/mihomo-subs-converter/default.html
+++ b/mihomo-subs-converter/default.html
@@ -28,19 +28,19 @@
         <ul class="ol-links">
           <li>Available Mihomo Subs Links:</li>
           <li>
-            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 Nc 100</a>
+            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 Nodes Collector #1</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 Xqe</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 Auto #1</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 Auto 1</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&base64=true">🆔 Auto #2</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&base64=true">🆔 Auto 2</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 Manual - Xqe</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2FSurfboardv2ray%2FProxy-sorter%2Fmain%2Fselector%2Frandom">🆔 Random 100</a>
+            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2FSurfboardv2ray%2FProxy-sorter%2Fmain%2Fselector%2Frandom">🆔 Surfboardv2ray - Random</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
           </li>
         </ul>
       </div>
-      <div class="version-info">Version: v2024.11.24</div>
+      <div class="version-info">Version: v2024.11.26</div>
     </blockquote>
   </body>
 </html>
