--- a/mihomo-subs-converter/fix.html
+++ b/mihomo-subs-converter/fix.html
@@ -31,7 +31,7 @@
         <ul class="ol-links">
           <li>Fixed Mihomo Subs Links:</li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F6%2Fyml">📎 Auto 6 Yaml</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F6%2Fyml">📎 Auto #6 Yaml File</a>
           </li>
         </ul>
       </div>
