Update fix.html: fix the value of property placeholder

--- a/mihomo-subs-converter/fix.html
+++ b/mihomo-subs-converter/fix.html
@@ -13,7 +13,7 @@
     <h1>Fix Mihomo Link</h1>
     <form action="/fix">
       <p>
-        <input type="text" class="link" id="link" name="link" placeholder="V2ray Subscription Link (e.g. https://example.com/v2ray_subs.txt)">
+        <input type="text" class="link" id="link" name="link" placeholder="Mihomo Subscription Link (e.g. https://example.com/mihomo_subs.yaml)">
       </p>
       <p>
         <input type="submit" value="Fix Mihomo Link">
