Update mihomo-subs-converter: add url parameter 'template' for choosing different mihomo template on need 👷

--- a/mihomo-subs-converter/default.html
+++ b/mihomo-subs-converter/default.html
@@ -17,6 +17,14 @@
       </p>
       <p>
         <span class="check-span">
+          <label for="template">Template:</label>
+          <select id="template" name="template">
+            <option value="0">0 - v2rayse.com</option>
+            <option value="1">1 - cfmem.com</option>
+            <option value="2">2 - youtube.com/@ZYFXS</option>
+          </select>
+        </span>
+        <span class="check-span">
           <input type="checkbox" id="base64" name="base64" value="true">
           <label for="base64">Base64 Decoding</label>
         </span>
@@ -61,7 +69,7 @@
           </li>
         </ul>
       </div>
-      <div class="version-info">Version: v2024.12.04</div>
+      <div class="version-info">Version: v2024.12.08</div>
     </blockquote>
   </body>
 </html>
