Update mihomo-subs-converter: 🔍 revise file 'fix.ts' for removing invalid html elements, update html files and demo links ⚓

--- a/mihomo-subs-converter/default.html
+++ b/mihomo-subs-converter/default.html
@@ -36,40 +36,47 @@
         <ul class="ol-links">
           <li>Available Mihomo Subs Links:</li>
           <li>
-            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 NC #0</a>
+            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D0">🆔 NC0 with template 0</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D1">🆔 NC #1</a>
+            <a href="?link=https%3A%2F%2Fnodes-collector.deno.dev%2F%3Fid%3D1&template=1">🆔 NC1 with template 1</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 Auto #1</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F0%2Ftxt&template=1&base64=true">🆔 Auto0 with template 1</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&base64=true">🆔 Auto #2</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F1%2Ftxt&base64=true">🆔 Auto1 with template 0</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2Fxqe%2Ftxt&base64=true">🆔 Manual xqe</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F2%2Ftxt&template=2&base64=true">🆔 Auto2 with template 2</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2FSurfboardv2ray%2FProxy-sorter%2Fmain%2Fselector%2Frandom">🆔 Surfboardv2ray random</a>
+            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2FSurfboardv2ray%2FProxy-sorter%2Fmain%2Fselector%2Frandom">🆔 Surfboardv2ray with template 0</a>
           </li>
           <li>
-            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2Fdyslab%2Fjnb-sample%2Frefs%2Fheads%2Fmaster%2Fv2ray_toolkit%2Ffetch-wz2023jd.txt">🆔 Dyslab wz2023jd</a>
+            <a href="?link=https%3A%2F%2Fraw.githubusercontent.com%2Fdyslab%2Fjnb-sample%2Frefs%2Fheads%2Fmaster%2Fv2ray_toolkit%2Ffetch-wz2023jd.txt&template=1">🆔 wz2023jd with template 1</a>
+          </li>
+          <li>
+            <a href="?link=https%3A%2F%2Fsubs-mirror.deno.dev%2F%3Fid%3D2&template=2">🆔 ermaozi with template 2</a>
           </li>
         </ul>
       </div>
       <div>
         <ul class="ol-links">
-          <li>Other Links:</li>
+          <li>Related Links:</li>
           <li>
             <a href="/fix">🔧 Fix Mihomo Subs</a>
+          </li>
+          <li>
+            <a href="https://subs.zhdys.workers.dev" target="_blank">🗒️ V2Ray Subscription List</a>
+            <a href="https://subs-mirror.deno.dev/" target="_blank">(Mirror)</a>
           </li>
           <li>
             <a href="https://wiki.metacubex.one/en/" target="_blank">📖 Mihomo Wiki Reference</a>
           </li>
         </ul>
       </div>
-      <div class="version-info">Version: v2025.01.05</div>
+      <div class="version-info">Version: v2025.01.11</div>
     </blockquote>
   </body>
 </html>
