--- a/mihomo-subs-converter/fix.html
+++ b/mihomo-subs-converter/fix.html
@@ -21,24 +21,25 @@
     </form>
     <blockquote>
       <div>
-        <span>This gateway fixes following issues:</span>
+        <span>This gateway resolved following issues:</span>
         <br>
         <ol>
-          <li>Incorrect configuration '<i>cipher: ss</i>' for SS nodes.</li>
+          <li>Remove invalid html element <i>&lt;pre&gt;</i> & <i>&lt;/pre&gt;</i>.</li>
+          <li>Remove SS nodes with the incorrect configuration of '<i>cipher: ss</i>'.</li>
         </ol>
       </div>
       <div>
         <ul class="ol-links">
-          <li>Fixed Mihomo Subs Links:</li>
+          <li>Recovered Links:</li>
           <li>
-            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F6%2Fyml">📎 Auto #6 Yaml File</a>
+            <a href="?link=https%3A%2F%2Ftext2image-ui.pages.dev%2Fsubs%2F6%2Fyml">📌 Auto6 Yaml File</a>
           </li>
         </ul>
       </div>
       <div>
         <ul class="ol-links">
           <li>
-            <a href="/">🏠 V2ray to Mihomo (Subscription Link Converter)</a>
+            <a href="/">↪️ Home Page</a>
           </li>
         </ul>
       </div>
