Update fix.ts to fix syntax error with '!&lt;str&gt; ' in certain yaml files 🚩

--- a/mihomo-subs-converter/fix.html
+++ b/mihomo-subs-converter/fix.html
@@ -21,10 +21,11 @@
     </form>
     <blockquote>
       <div>
-        <span>This gateway resolved following issues:</span>
+        <span>This gateway fixed following issues in the target YAML file:</span>
         <br>
         <ol>
-          <li>Remove invalid html element <i>&lt;pre&gt;</i> & <i>&lt;/pre&gt;</i>.</li>
+          <li>Remove invalid html tags '<i>&lt;pre&gt;</i>' & '<i>&lt;/pre&gt;</i>'.</li>
+          <li>Remove invalid yaml strings with '<i>&amp;lt;str&amp;gt;&nbsp;'</i>.</li>
           <li>Remove SS nodes with the incorrect configuration of '<i>cipher: ss</i>'.</li>
         </ol>
       </div>
@@ -39,7 +40,7 @@
       <div>
         <ul class="ol-links">
           <li>
-            <a href="/">↪️ Home Page</a>
+            <a href="/">↪️ Back To Home Page</a>
           </li>
         </ul>
       </div>
